<resources>
    <string name="app_name">安大通</string>
    <string name="title_schedule">课表</string>
    <string name="title_discovery">发现</string>
    <string name="title_mine">我的</string>
    <string name="mine_tv_identity">教务系统认证</string>
    <string name="mine_tv_logout">教务系统注销</string>
    <string name="setting">设置</string>
    <string name="mine_tv_recommend">推荐给好友</string>
    <string name="mine_tv_feedback">意见反馈</string>
    <string name="mine_tv_about_us">关于我们</string>
    <string name="contributors">贡献名单</string>
    <string name="mine_tv_developer">开发者</string>
    <string name="mine_tv_partner">加入我们</string>
    <string name="tools_logo">tools logo</string>
    <string name="college">院系风采</string>
    <string name="edu">教务通知</string>
    <string name="association">社团动态</string>
    <string name="recruit">校招实习</string>
    <string name="ok">确定</string>
    <string name="close">关闭</string>
    <string name="import_schedule">导入课表</string>
    <string name="add_course">手动添加课程</string>
    <string name="setting_change_theme">更换主题</string>
    <string name="setting_diy_theme">自定义主题</string>
    <string name="setting_show_all">显示非本周课程</string>
    <string name="setting_clear">清除数据</string>
    <string name="license">开源协议</string>
    <string name="login">认证</string>
    <string name="hint_userid">请输入您的学号</string>
    <string name="hint_wisdom_password">请输入您的智慧安大密码</string>
    <string name="hint_teach_password">请输入您的教务系统密码</string>
    <string name="more">更多</string>
    <string name="library">图书馆</string>
    <string name="emptyRoom">空教室</string>
    <string name="pass">挂科率</string>
    <string name="grade">成绩单</string>
    <string name="exam">考场查询</string>
    <string name="teachIn">宣讲会</string>
    <string name="share_schedule">共享课表</string>
    <string name="bathroom">浴室开放</string>
    <string name="rubbish">垃圾分类</string>
    <string name="phone_book">电话本</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img">这是一个图</string>
    <string name="require">查询</string>
    <string name="tip_empty_room">仅能获取当日数据</string>
    <string name="empty_exam">当前没有考试信息</string>
    <string name="schoolYear">学年：</string>
    <string name="term">学期：</string>
    <string name="term_grade">本学期绩点</string>
    <string name="search_book">书籍索引</string>
    <string name="search_hint">请输入你要搜索的内容</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="history_empty">搜索历史为空</string>
    <string name="top">热门借阅</string>
    <string name="empty_teachIn">近一周没有宣讲会哦!</string>
    <string name="add_schedule">添加到课表</string>
    <string name="schedule_setting">课程表设置</string>
    <string name="schedule_not_this_week">[非本周] %s</string>
    <string name="tool">Tool</string>
    <string name="login_local_wisdom">智慧安大(本地)</string>
    <string name="login_wisdom_ahu">智慧安大</string>
    <string name="login_teach_system">教务系统</string>
    <string name="search">搜索</string>
    <string name="check_update">检查更新</string>
    <string name="update_intro">更新日志</string>
    <string name="schedule_input">导入课表</string>
    <string name="schedule_add">手动添加课程</string>
    <string name="schedule_time">设置当前时间</string>
    <string name="change_theme">切换主题</string>
    <string name="course_name">课程名称</string>
    <string name="teacher_name">老师姓名</string>
    <string name="please_select">请选择</string>
    <string name="location_hint">教学楼+教室</string>
    <string name="location">地点</string>
    <string name="time">节数</string>
    <string name="end_week">结束周</string>
    <string name="start_week">开始周</string>
    <string name="week">星期</string>
    <string name="teacher">老师</string>
    <string name="course">课程</string>
    <string name="course_length_hint">输入数字即可,例如 2 = 两节</string>
    <string name="discovery_course">今日课表</string>
    <string name="discovery_activity">校园信息</string>
    <string name="card_money">校园卡余额</string>
    <string name="bathroom_time">10:30 – 21:00</string>
    <string name="recharge">充值</string>
    <string name="view_flow">查看流水</string>

    <string name="log_in">登录</string>
    <string name="logging_in">登录中</string>
    <string name="fill_in_info">完善信息</string>
    <string name="school_year">学年</string>
    <string name="school_term">学期</string>
    <string name="current_week">当前周</string>

    <string name="school_calendar">校历</string>
    <string name="free_classroom">空闲教室</string>
    <string name="lost_found">失物招领</string>
    <string name="preferences">偏好设置</string>
    <string name="repository">学习资料</string>
    <string name="repository_downloads">已下载</string>
</resources>
