<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="主题">
        <Preference
            app:title="@string/setting_change_theme"
            app:key="change_theme"
            app:iconSpaceReserved="false"/>
        <Preference
            app:title="@string/setting_diy_theme"
            app:key="diy_theme"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="课表">

        <SwitchPreference
            app:title="@string/setting_show_all"
            app:key="show_all"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="其他">
        <Preference
            app:title="@string/license"
            app:key="license"
            app:iconSpaceReserved="false"/>
        <Preference
            app:title="@string/setting_clear"
            app:key="clear"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</PreferenceScreen>