<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="proxy"
            type="com.ahu.ahutong.ui.dialog.SettingScheduleDialog.ClickProxy" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{(v)->proxy.inputSchedule()}"
                android:paddingVertical="15dp"
                android:text="@string/schedule_input"
                android:textAppearance="?textAppearanceListItem"
                tools:text="导入课表" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorSecondary" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{(v)->proxy.addCourse()}"
                android:paddingVertical="15dp"
                android:text="@string/schedule_add"
                android:textAppearance="?textAppearanceListItem"
                tools:text="手动添加课程" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorSecondary" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(v)->proxy.setStartTime()}">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/schedule_time"
                android:textAppearance="?textAppearanceListItem"
                tools:text="设置开学时间" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorSecondary" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{(v)->proxy.gotoSetting()}"
                android:paddingVertical="15dp"
                android:text="@string/setting"
                android:textAppearance="?textAppearanceListItem"
                tools:text="设置" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="?colorSecondary" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(v)->proxy.close()}">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/close"
                android:textAppearance="?textAppearanceListItem"
                tools:text="关闭" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</layout>
