<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="add"
            type="java.lang.Boolean" />

        <variable
            name="state"
            type="com.ahu.ahutong.ui.page.state.CourseViewModel" />

        <variable
            name="proxy"
            type="com.ahu.ahutong.ui.page.CourseFragment.ClickProxy" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eee">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.MaterialToolbar
                    onIconClick="@{proxy.back}"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:navigationIcon="@drawable/icon_back"
                    app:title="@{add ? `添加课程` : `课程详情`}"
                    tools:title="课程详情" />
            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/course"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="课程" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_course_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/course_name"
                    android:text="@{state.course.name}"
                    android:textAppearance="?textAppearanceBody2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/teacher"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="老师" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_course_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/teacher_name"
                    android:text="@{state.course.teacher}"
                    android:textAppearance="?textAppearanceBody2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/week"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="星期" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:onClick="@{(v)->proxy.chooseWeekday()}"
                    android:text="@{state.course.weekday == 0 ? `请选择` :  `周` + state.course.weekday}"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="请选择" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/start_week"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="开始周" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:onClick="@{(v)->proxy.chooseStartWeek()}"
                    android:text="@{state.course.startWeek == 0 ? `请选择` :  `第 ` + state.course.startWeek + ` 周`}"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="请选择" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/end_week"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="结束周" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:onClick="@{(v)->proxy.chooseEndWeek()}"
                    android:text="@{state.course.endWeek == 0 ? `请选择` :  `第 ` + state.course.endWeek + ` 周`}"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="请选择" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/time"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="开始节数" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:onClick="@{(v)->proxy.chooseStartTime()}"
                    android:text="@{state.course.startTime == 0 ? `请选择` :  `第 ` + state.course.startTime +` 节`}"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="请选择" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/time"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="持续节数" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_course_length"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/course_length_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="2"
                    android:text="@{state.course.length == 0 ? `` : state.course.length.toString()}"
                    android:textAppearance="?textAppearanceBody2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/location"
                    android:textAppearance="?textAppearanceListItem"
                    tools:text="地点" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_course_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/location_hint"
                    android:text="@{state.course.location}"
                    android:textAppearance="?textAppearanceBody2" />

            </LinearLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{(v)->proxy.saveOrAddCourse()}"
                android:text="@{add ? `添加` : `保存`}"
                tools:text="添加" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(v)->proxy.deleteCourse()}"
                android:text="@{`删除`}"
                android:visibility="@{add ? View.GONE : View.VISIBLE}"
                tools:text="删除" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</layout>
