<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="state"
            type="com.ahu.ahutong.ui.page.state.LoginViewModel" />

        <variable
            name="proxy"
            type="com.ahu.ahutong.ui.page.LoginFragment.ClickProxy" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="登录" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.ahu.ahutong.ui.widget.EmojiView
            android:id="@+id/emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyOutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_userId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_userid" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyOutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_wisdom_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_wisdom_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{(v) -> proxy.login(v)}"
            android:paddingHorizontal="50dp"
            android:text="@string/login" />

    </LinearLayout>
</layout>
