<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<!--        <variable-->
<!--            name="state"-->
<!--            type="com.ahu.tong.ui.fragment.grade.GradeViewModel" />-->
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.grade.GradeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/grade" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/img"
                    android:src="@mipmap/grade" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-25dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/schoolYear" />

                    <Spinner
                        android:id="@+id/sp_schoolYear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/term" />

                    <Spinner
                        android:id="@+id/sp_term"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView
                        android:id="@+id/tv_term"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@id/barrier"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/term_grade" />

                    <TextView
                        android:id="@+id/tv_term_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_term"
                        app:layout_constraintStart_toStartOf="@+id/tv_term"
                        app:layout_constraintTop_toBottomOf="@+id/tv_term"
                        tools:text="4.0" />

                    <View
                        android:id="@+id/barrier"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/total_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.3"
                        app:layout_constraintStart_toEndOf="@id/barrier"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="全程绩点：" />

                    <TextView
                        android:id="@+id/schoolYear_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="学期绩点： "
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/total_grade"
                        app:layout_constraintTop_toBottomOf="@+id/total_grade" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recycle_grades"/>
            </LinearLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</layout>
    t>