<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="state"
			type="com.ahu.ahutong.ui.page.state.ClassRoomViewModel" />

		<variable
			name="proxy"
			type="com.ahu.ahutong.ui.page.ClassRoomFragment.ClickProxy" />
	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context=".ui.fragment.empty.EmptyRoomFragment">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fitsSystemWindows="true">

			<com.google.android.material.appbar.MaterialToolbar
				onIconClick="@{proxy.back}"
				android:layout_width="match_parent"
				android:layout_height="?actionBarSize"
				app:navigationIcon="@drawable/icon_back"
				app:title="@string/emptyRoom"
				tools:title="@string/emptyRoom" />
		</com.google.android.material.appbar.AppBarLayout>

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="180dp"
					android:contentDescription="@string/img"
					android:src="@mipmap/emptyroom" />

				<androidx.cardview.widget.CardView
					android:id="@+id/card_selector_info"
					android:layout_width="match_parent"
					android:layout_height="100dp"
					android:layout_marginHorizontal="10dp"
					app:cardBackgroundColor="?colorSecondary"
					app:cardCornerRadius="6dp"
					app:cardElevation="0dp"
					app:cardUseCompatPadding="false">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:onClick="@{(thisView) -> proxy.selectTime(thisView)}"
						android:orientation="vertical">

						<TextView
							android:id="@+id/tv_campus"
							android:layout_width="match_parent"
							android:layout_height="0dp"
							android:layout_weight="1"
							android:gravity="center"
							android:text="@{`校区：`+ state.campus}"
							tools:text="校区：龙河校区" />

						<TextView
							android:id="@+id/tv_time"
							android:layout_width="match_parent"
							android:layout_height="0dp"
							android:layout_weight="1"
							android:gravity="center"
							android:text="@{`时间：` + state.time}"
							tools:text="时间：1，2节" />
					</LinearLayout>
				</androidx.cardview.widget.CardView>

				<Button
					android:id="@+id/bt_require"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginVertical="10dp"
					android:onClick="@{(thisView) -> proxy.search()}"
					android:paddingHorizontal="50dp"
					android:text="@string/require" />

				<androidx.cardview.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_marginHorizontal="10dp"
					android:layout_weight="1"
					app:cardBackgroundColor="?colorSecondary"
					app:cardCornerRadius="10dp"
					app:cardElevation="0dp"
					app:cardUseCompatPadding="false">

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/recycle_rooms"
						android:layout_width="match_parent"
						android:layout_height="match_parent" />
				</androidx.cardview.widget.CardView>
			</LinearLayout>
		</androidx.core.widget.NestedScrollView>

	</LinearLayout>
</layout>
